<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.Cobranca">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtDescricao"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/descricao_da_compra"
            android:inputType="text|textCapSentences"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/valor_da_compra"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="text|textCapSentences|numberSigned"
            android:text="$0.00"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:text="@string/forma_de_pagamento"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tVNumeroOculto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/xxxx_xxxx_xxxx_xxxx"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/comprar"
        android:onClick="comprarButton"
        android:textColor="@android:color/white" />
</RelativeLayout>