<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.CreditCardForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.braintreepayments.cardform.view.CardForm
            android:id="@+id/card_form"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </com.braintreepayments.cardform.view.CardForm>

        <EditText
            android:id="@+id/edtPrimeiroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/primeiro_nome"
            android:inputType="text|textCapSentences"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtUltimoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="top"
            android:hint="@string/ultimo_nome"
            android:inputType="text|textCapSentences"
            android:textCursorDrawable="@drawable/color_cursor" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/salvarButtonCliente"
        android:onClick="salvarCartao"
        android:textColor="@android:color/white" />

</RelativeLayout>