<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetalhesCliente"
    tools:showIn="@layout/activity_detalhes_cliente">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeCliente"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailCliente"
            android:textSize="18sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list_payments"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView_nenhum_pagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nenhuma_forma_de_pagamento"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_in"
                tools:targetApi="lollipop" />
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>