<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NovoCliente">

<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context=".activity.NovoCliente">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/nomeCliente"
            android:inputType="text|textCapSentences"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtEmail"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginTop="30dp"
            android:gravity="top"
            android:hint="@string/emailCliente"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/salvar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:onClick="salvarOrAtualizarButton"
            android:text="@string/salvarButtonCliente"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!--</android.support.constraint.ConstraintLayout>-->
</RelativeLayout>